...
        contentDescription = stringResource(R.string.content_description_add),
        tint = MaterialTheme.colorScheme.primary,
        modifier =
            Modifier.align(Alignment.Center)
                .width(Dimensions.BottomNavButtonWidth)
                .clickable { showBottomSheet = true }
                .testTag("center_add_button"))

    // Bottom Sheet for event creation options
    if (showBottomSheet) {
      ModalBottomSheet(
          onDismissRequest = { showBottomSheet = false },
          sheetState = bottomSheetState,
...
